--- a/Capstone/Views/Event/Details.cshtml
+++ b/Capstone/Views/Event/Details.cshtml
@@ -73,8 +73,11 @@
                                 <h1>@Model.Name.ToUpper()</h1>
                             <div class="my-3 d-flex align-items-center text-center">
                                 <a class="eventBtn mx-1" href="@Url.Action("List", "Event")">Eventi</a>
-                                <a class="editBtn mx-1" href="@Url.Action("Edit", "Event", new { id = Model.EventId })">Modifica</a>
-                                <a class="btn-danger myBtnCart mx-1 " href="@Url.Action("Delete", "Event", new { id = Model.EventId })">Elimina</a>
+                                @if (User.IsInRole("master") || User.IsInRole("admin"))
+                                {
+                                    <a class="editBtn mx-1" href="@Url.Action("Edit", "Event", new { id = Model.EventId })">Modifica</a>
+                                    <a class="btn-danger myBtnCart mx-1 " href="@Url.Action("Delete", "Event", new { id = Model.EventId })">Elimina</a>
+                                }
                             </div>
                                 <p class="mt-3">@Model.Description</p>
                                 <p class="text-danger fw-bolder my-3">Dal @Model.DateFrom.Day/@Model.DateFrom.Month al @Model.DateTo.Day/@Model.DateTo.Month</p>
@@ -196,16 +199,20 @@
                                     <div class="d-flex justify-content-end position-absolute" style="top:-51px; right:0;">
                                         @if (isCurrentUserReview)
                                         {
-                                            <span onclick="toggleEditMode(@review.ReviewId)" style="cursor:pointer" class="bgEdit rounded text-decoration-none text-white pill me-2">
+                                            
+                                        <span onclick="toggleEditMode(@review.ReviewId)" style="cursor:pointer" class="bgEdit rounded text-decoration-none text-white pill me-2">
                                                 <i class="bi bi-pencil"></i>
                                             </span>
                                         }
+                                        @if (isCurrentUserReview || User.IsInRole("admin") || User.IsInRole("master"))
+                                        {
                                         <form style="display:inline;">
                                             @Html.AntiForgeryToken()
                                             <button type="button" class="deleteReviewBtn bg-danger rounded text-decoration-none noBtn text-white pill" data-review-id="@review.ReviewId" style="cursor:pointer;">
                                                 <i class="bi bi-trash3-fill"></i>
                                             </button>
                                         </form>
+                                        }
                                     </div>
 
                                     <!-- Review Image Section -->
@@ -338,6 +345,7 @@
                         <h4 id="commentBtn" class="myLink mb-4" style="cursor:pointer">Aggiungi un commento <i class="bi bi-pencil-square"></i></h4>
                         <div id="commentForm" class="col-12 col-md-10 col-lg-6 col-xl-5 my-4" style="display: none;">
                             <form asp-action="Create" asp-controller="Comment" method="post">
+                                @Html.AntiForgeryToken()
                                 <div class="form-group">
                                     <textarea id="Description" name="Description" class="form-control inputBar shadow-none place pt-3 px-3 border-0" placeholder="Scrivi un commento..." required></textarea>
                                 </div>
