--- a/Capstone/Views/Dj/Delete.cshtml
+++ b/Capstone/Views/Dj/Delete.cshtml
@@ -1,42 +1,34 @@
 ﻿@model Capstone.Models.Dj
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Elimina DJ";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Dj</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ArtistName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ArtistName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Img)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Img)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ArtistSpotifyId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ArtistSpotifyId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ArtistDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ArtistDescription)
-        </dd>
-    </dl>
-
-    <a href="@Url.Action("Delete", "Dj", new { id = Model.DjId, confirm = true })" class="btn btn-danger">Elimina</a>
-    <a href="@Url.Action("List", "Dj")" class="btn btn-secondary">Torna alla lista</a>
+<div class="row min-heigth justify-content-center align-items-center p-4 p-md-0">
+    <div class="col-12">
+        <div class="row  justify-content-md-around justify-content-lg-center p-1 p-md-5 bg-black">
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 d-flex justify-content-center align-items-center">
+                <img src="@Model.Img" alt="@Model.ArtistName Image" width="250" height="250" style="border-radius: 50%; object-fit: cover" />
+            </div>
+            <div class="col-12 col-md-5 d-flex flex-column justify-content-center">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="text-center myText">Sicuro di voler eliminare <span class="text-danger fw-bolder">@Model.ArtistName</span> dalla lista dei DJ?  </h1>
+                        <p class="mt-4 text-center fs-5 myText">
+                                ID Spotify: <span class="text-danger fw-bolder">@Model.ArtistSpotifyId</span>
+                            </p>
+                        <p class="text-center fs-5 mt-3 myText">
+                                Descrizione: <span class="text-danger fw-bolder">@Model.ArtistDescription</span>
+                            </p>
+                          <p class="text-center mt-5">
+                            <a href="@Url.Action("Delete", "Dj", new { id = Model.DjId, confirm = true })" class="btn-danger myBtnCart mx-2">Elimina</a>
+                            <a href="@Url.Action("List", "Dj")" class="eventBtn mx-2">Annulla</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
