Aggiunte autorizzazioni e aggiornamenti layout viste
- Aggiunte direttive `using` in `GenreController.cs`
- Autorizzazione `AdminOrMasterPolicy` per metodi in `GenreController.cs`
- Aggiornato layout di `Create.cshtml`, `Delete.cshtml`, `Edit.cshtml` e `List.cshtml` con nuove strutture HTML, classi CSS personalizzate e testi in italiano
- Aggiunto file CSS `list_genre.css` per stilizzare la lista dei generi

--- a/Capstone/Views/Genre/Edit.cshtml
+++ b/Capstone/Views/Genre/Edit.cshtml
@@ -4,22 +4,28 @@
     ViewBag.Title = "Edit Genre";
 }
 
-<h2>Edit Genre</h2>
+<div class="row bg-black justify-content-center px-1 p-md-5">
+    <h3 class="myText myTitle">Modifica Genere</h3>
+    <div class="col-10 col-md-6 bg my-2">
+        <form asp-action="Edit" method="post">
+            @Html.AntiForgeryToken()
 
-<form asp-action="Edit" method="post">
-    @Html.AntiForgeryToken()
+            <input type="hidden" asp-for="GenreId" />
 
-    <input type="hidden" asp-for="GenreId" />
+            <div class="form-group">
+                <label asp-for="Name" class="control-label text-white">Nome Genere</label>
+                <input asp-for="Name" class="form-control inputBar" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
 
-    <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
+            <div class="form-group mt-3">
+                <button type="submit" class="btn-danger myBtnCart">Salva</button>
+                <a asp-action="List" class="eventBtn">Torna alla lista</a>
+            </div>
+        </form>
     </div>
+</div>
 
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-    <a asp-action="List" class="btn btn-secondary">Back to List</a>
-</form>
 
 @section Scripts {
     @{
