--- a/Capstone/Views/Genre/Create.cshtml
+++ b/Capstone/Views/Genre/Create.cshtml
@@ -4,28 +4,29 @@
     ViewData["Title"] = "Create Genre";
 }
 
-<h1>Create Genre</h1>
+<div class="row bg-black justify-content-center px-1 p-md-5">
+    <h3 class="myText myTitle">Aggiungi Genere</h3>
+    <div class="col-10 col-md-6 bg my-2">
+        <div class="row">
+            <div class="col-12">
+                <form asp-action="Create" id="createGenreForm" method="post">
+                    @Html.AntiForgeryToken()
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<h4>Genre</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                    <div class="form-group">
+                        <label asp-for="Name" class="control-label text-white">Nome Genere</label>
+                        <input asp-for="Name" class="form-control inputBar" placeholder="Scrivi nome genere..." />
+                        <span asp-validation-for="Name" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-group mt-3">
+                        <input type="submit" value="Salva" class="btn-danger myBtnCart" />
+                        <a asp-action="List" class="eventBtn">Torna alla lista</a>
+                    </div>
+                </form>
             </div>
-            <div class="form-group mt-1">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="List">Back to List</a>
 </div>
 
 @section Scripts {
