--- a/Capstone/Views/Genre/Delete.cshtml
+++ b/Capstone/Views/Genre/Delete.cshtml
@@ -1,16 +1,21 @@
 ﻿@model Capstone.Models.Genre
 
 @{
-    ViewBag.Title = "Delete Genre";
+    ViewData["Title"] = "Elimina Genere";
 }
 
-<h2>Delete Genre</h2>
 
-<h3>Are you sure you want to delete this genre?</h3>
-<div>
-    <h4>@Model.Name</h4>
-    <hr />
+<div class="row min-heigth justify-content-center align-items-center py-4 p-md-0">     
+    <div class="col-12">
+      <div class="row bg-black py-5">
+
+        <h1 class="text-center myText">Sicuro di voler eliminare <span class="text-danger fw-bolder">@Model.Name</span> dalla lista dei Generi?  </h1>
+      
+        <p class="text-center mt-4">
+            <a href="@Url.Action("Delete", "Genre", new { id = Model.GenreId, confirm = true })" class="btn-danger myBtnCart mx-2">Elimina</a>
+            <a href="@Url.Action("List", "Genre")" class="eventBtn mx-2">Annulla</a>
+         </p>
+      </div>
+    </div>
 </div>
-
-<a href="@Url.Action("Delete", "Genre", new { id = Model.GenreId, confirm = true })" class="btn btn-danger">Delete</a>
-<a href="@Url.Action("List", "Genre")" class="btn btn-secondary">Cancel</a>
+      
