--- a/Capstone/Views/Genre/List.cshtml
+++ b/Capstone/Views/Genre/List.cshtml
@@ -4,30 +4,35 @@
     ViewBag.Title = "Genres";
 }
 
-<h2>Genres</h2>
+<link rel="stylesheet" href="~/css/list_genre.css" />
+<div class="row bg-black justify-content-center px-1 p-md-5">
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">Create New Genre</a>
-</p>
+    <div class="col-10 col-md-8 bg my-2">
+        <h3 class="myText  text-center mb-4">Generi Musicali</h3>
 
-<table class="table table-bordered table-striped">
-    <thead>
-        <tr>
-            <th>Genre Name</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var genre in Model)
-        {
-            <tr>
-                <td>@genre.Name</td>
-                <td>
-@*                     <a asp-action="Details" asp-route-id="@genre.GenreId" class="btn btn-info">Details</a>
- *@                    <a asp-action="Edit" asp-route-id="@genre.GenreId" class="btn btn-warning">Edit</a>
-                    <a href="@Url.Action("Delete", "Genre", new { id = genre.GenreId })" class="btn btn-danger">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+        <table class="table table-bordered table-hover text-white" style="border-collapse: separate; border-spacing: 0 10px;">
+            <thead class="thead-dark">
+                <tr style="border-bottom: 2px solid #666666;">
+                    <th class="text-center" style="padding: 15px; border-color: #666666;"><h4 class="fs-5">Nome Genere</h4></th>
+                    <th class="text-center" style="padding: 15px; border-color: #666666;"><h4 class="fs-5">Azioni</h4></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var genre in Model)
+                {
+                    <tr class="bg-dark" style="border-radius: 15px; overflow: hidden; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); transition: all 0.3s ease;">
+                        <td class="text-center text-white align-middle" style="padding: 20px 15px; border: none;">@genre.Name</td>
+                        <td class="text-center d-flex flex-column flex-md-row justify-content-center" style="padding: 15px; border: none;">
+                            <a asp-action="Edit" asp-route-id="@genre.GenreId" class="editBtn mx-1 btn btn-warning my-1 my-md-0 ">Modifica</a>
+                            <a href="@Url.Action("Delete", "Genre", new { id = genre.GenreId })" class="btn-danger myBtnCart mx-1">Elimina</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+        <div class="text-end">
+            <a asp-action="Create" class="eventBtn mt-2">Crea Nuovo Genere</a>
+        </div>
+    </div>
+</div>
